Fix invisible drag handles

--- a/src/components/cells/Cell.module.scss
+++ b/src/components/cells/Cell.module.scss
@@ -25,6 +25,7 @@
   justify-content: center;
   font-weight: 700;
   position: relative; /* To position handles. */
+  overflow: visible;
 
   background-color: colors.$base-gray;
   color: colors.$text-labels;
